# Autograd-Experiments

./: Cargo.toml  README.md
src/: backprop.rs  layers.rs  lib.rs  main.rs  ops.rs  ops_impls.rs  store.rs  tape.rs  tensor.rs  tensor_backends.rs  test_helpers.rs
src/ops/: add.rs  index.rs  logsoftmax.rs  matmul.rs  mul.rs  relu.rs  sum.rs  testing.rs
src/ops_impls/: add.rs  add_scalar.rs  index.rs  matmul.rs  mul.rs  mul_op.rs  ndarray_specific.rs  relu.rs  reshape.rs  sub.rs  sum.rs  tests.rs
src/tensor/: backends.rs
src/tensor/backends/: ndarray_backend.rs
src/tensor_backends/: indexing.rs  ndarray_backend.rs
src/tensor_backends/ndarray_backend/: matmul2d.rs
