[package]
name = "backprop"
version = "0.1.0"
authors = ["Tiberio Ferreira <tiberiusferreira@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.0"
ndarray-rand = "0.11.0"

[lib]
name = "backprop"
path = "src/backprop.rs"

[[bin]]
name = "main"
path = "src/main.rs"